--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- this will be header -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,25 +25,32 @@
             </ul>
         </nav>
     </header>
-    <div class="hero" alt=""></div>
+    <!-- add an alt msg here -->
+    <div class="hero" alt="a diverse team working together to solve an issue while in an office setting with whiteboards and wooden backgrounds"></div>
     <!-- this will be a section -->
     <section class="content">
         <!-- this will be an article -->
+
         <article id="search-engine-optimization" class="search-engine-optimization">
+                    <!-- add an alt message -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with office supplies" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+
         <article id="online-reputation-management" class="online-reputation-management">
+                    <!-- add an alt message -->
             <img src="./assets/images/online-reputation-management.jpg" alt="Working on graphs on laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
+
         <article id="social-media-marketing" class="social-media-marketing">
+                    <!-- add an alt message -->
             <img src="./assets/images/social-media-marketing.jpg" alt="team collaboration with ideas" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
