changed out all div to applicable semantics

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,8 +25,10 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Change to section -->
     <!-- add an alt msg here -->
-    <div class="hero" alt="a diverse team working together to solve an issue while in an office setting with whiteboards and wooden backgrounds"></div>
+    <section class="hero" alt="a diverse team working together to solve an issue while in an office setting with whiteboards and wooden backgrounds"></section>
     <!-- this will be a section -->
     <section class="content">
         <!-- this will be an article -->
@@ -58,30 +60,37 @@
             </p>
         </article>
     </section>
+
     <!-- this will be an aside -->
     <aside class="benefits">
         <!-- this will be an article -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!-- add and alt message -->
             <img src="./assets/images/lead-generation.png" alt="gears funnel to money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
+
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
+            <!-- add and alt message -->
             <img src="./assets/images/brand-awareness.png" alt="lightbulb idea head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
+
         <article class="benefit-cost">
             <h3>Cost Management</h3>
+            <!-- add and alt message -->
             <img src="./assets/images/cost-management.png" alt="gears money"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
+
     </aside>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
