added complete README and changed css HTML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="search-engine-optimization">
                     <!-- add an alt message -->
             <img src="./assets/images/online-reputation-management.jpg" alt="Working on graphs on laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="search-engine-optimization">
                     <!-- add an alt message -->
             <img src="./assets/images/social-media-marketing.jpg" alt="team collaboration with ideas" class="float-left" />
             <h2>Social Media Marketing</h2>
